NetBSD Problem Report #46560

From www@NetBSD.org  Fri Jun  8 07:43:15 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id B2A1B63B89C
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  8 Jun 2012 07:43:15 +0000 (UTC)
Message-Id: <20120608074315.307CF63B882@www.NetBSD.org>
Date: Fri,  8 Jun 2012 07:43:15 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Memory leak in citrus_mapper.c
X-Send-Pr-Version: www-1.0

>Number:         46560
>Category:       lib
>Synopsis:       Memory leak in citrus_mapper.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jun 08 07:45:00 +0000 2012
>Closed-Date:    Wed Jun 13 18:49:20 +0000 2012
>Last-Modified:  Wed Jun 13 18:49:20 +0000 2012
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Memory leak in error path in function _citrus_mapper_create_area.
>How-To-Repeat:

>Fix:
diff -u -p -r1.9 citrus_mapper.c
--- lib/libc/citrus/citrus_mapper.c	19 Nov 2011 18:43:40 -0000	1.9
+++ lib/libc/citrus/citrus_mapper.c	8 Jun 2012 05:53:57 -0000
@@ -102,6 +102,7 @@ _citrus_mapper_create_area(
 	}
 	ma->ma_dir = strdup(area);
 	if (ma->ma_dir == NULL) {
+		free(ma);
 		ret = errno;
 		goto quit;
 	}

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Fri, 08 Jun 2012 07:49:44 +0000
State-Changed-Why:
Applied, thanks!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46560 CVS commit: src/lib/libc/citrus
Date: Fri, 8 Jun 2012 07:49:43 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Fri Jun  8 07:49:42 UTC 2012

 Modified Files:
 	src/lib/libc/citrus: citrus_mapper.c

 Log Message:
 Henning Petersen in PR lib/46560: fix memory leak in error path


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/lib/libc/citrus/citrus_mapper.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: lib/46560 (Memory leak in citrus_mapper.c)
Date: Sun, 10 Jun 2012 17:56:18 +0000

 On Fri, Jun 08, 2012 at 07:49:45AM +0000, martin@NetBSD.org wrote:
  > Synopsis: Memory leak in citrus_mapper.c
  > 
  > State-Changed-From-To: open->closed
  > State-Changed-By: martin@NetBSD.org
  > State-Changed-When: Fri, 08 Jun 2012 07:49:44 +0000
  > State-Changed-Why:
  > Applied, thanks!

 Shouldn't this be pulled up to -6?

 -- 
 David A. Holland
 dholland@netbsd.org

State-Changed-From-To: closed->pending-pullups
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sun, 10 Jun 2012 19:12:34 +0000
State-Changed-Why:
[pullup-6 #324]


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46560 CVS commit: [netbsd-6] src/lib/libc/citrus
Date: Tue, 12 Jun 2012 19:42:54 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Tue Jun 12 19:42:53 UTC 2012

 Modified Files:
 	src/lib/libc/citrus [netbsd-6]: citrus_mapper.c

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #324):
 	lib/libc/citrus/citrus_mapper.c: revision 1.10
 Henning Petersen in PR lib/46560: fix memory leak in error path


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.9.2.1 src/lib/libc/citrus/citrus_mapper.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 13 Jun 2012 18:49:20 +0000
State-Changed-Why:
pulled up, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.