Pull up following revision(s) (requested by martin in ticket #324): 	lib/libc/citrus/citrus_mapper.c: revision 1.10 Henning Petersen in PR lib/46560: fix memory leak in error path